# python-postgresql

./: .gitignore  README.md  pyproject.toml
python_postgresql/: config_handler.py  database_handler.py  main.py
